--- a/frida_project.ipynb
+++ b/frida_project.ipynb
@@ -193,7 +193,6 @@
    "source": [
     "#zip list and wrap with list() to convert zip obj to list\n",
     "master_list = list(zip(audio_tour_number, paintings))\n",
-    "p"
    ]
   },
   {
@@ -201,7 +200,8 @@
    "metadata": {},
    "source": [
     "## Task 8 \n",
-    "Print the `master_list` to the terminal."
+    "Print the `master_list` to the terminal.",
+    "print(master_list)",
    ]
   },
   {
