--- a/frida_project.ipynb
+++ b/frida_project.ipynb
@@ -182,17 +182,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, ('The Two Fridas', 1939)), (1, ('My Dress Hangs Here', 1933)), (2, ('Tree of Hope', 1946)), (3, ('Self Portrait With Monkeys', 1940)), (4, ('The Broken Column', 1944)), (5, ('The Wounded Deer', 1946)), (6, ('Me and My Doll', 1937))]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#zip list and wrap with list() to convert zip obj to list\n",
     "master_list = list(zip(audio_tour_number, paintings))\n",
+    "print(master_list)"
    ]
   },
   {
@@ -200,19 +204,30 @@
    "metadata": {},
    "source": [
     "## Task 8 \n",
-    "Print the `master_list` to the terminal.",
-    "print(master_list)",
+    "Print the `master_list` to the terminal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, ('The Two Fridas', 1939)), (1, ('My Dress Hangs Here', 1933)), (2, ('Tree of Hope', 1946)), (3, ('Self Portrait With Monkeys', 1940)), (4, ('The Broken Column', 1944)), (5, ('The Wounded Deer', 1946)), (6, ('Me and My Doll', 1937))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(master_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
