--- a/frida_project.ipynb
+++ b/frida_project.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "audio_tour_number = list(range(len(paintings)))\n",
+    "audio_tour_number = list(range(1, len(paintings) + 1))\n",
     "print(audio_tour_number)"
    ]
   },
